scripts/nullaway/nullgtn/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8.txt
../nullgtn/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/map/SquareMap.java:27: error: [NullAway] parameter x is @NonNull, but parameter in superclass method fws.utility.map.Map.getCell(float,float) is @Nullable
    public T getCell(float x, float y) {
                           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/map/SquareMap.java:38: error: [NullAway] parameter index is @NonNull, but parameter in superclass method fws.utility.map.Map.getNeighbor(int,int) is @Nullable
    public T getNeighbor(int index, int dir) {
                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/map/SquareMap.java:40: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/map/SquareMap.java:53: error: [NullAway] parameter index is @NonNull, but parameter in superclass method fws.utility.map.Map.getDiagonalNeighbor(int,int) is @Nullable
    public T getDiagonalNeighbor(int index, int dir) {
                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/map/SquareMap.java:55: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/map/Map.java:47: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/map/HexMap.java:33: error: [NullAway] parameter x is @NonNull, but parameter in superclass method fws.utility.map.Map.getCell(float,float) is @Nullable
    public T getCell(float x, float y) {
                           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/map/HexMap.java:47: error: [NullAway] method returns @Nullable, but superclass method fws.utility.map.Map.getNeighbor(int,int) returns @NonNull
    public T getNeighbor(@javax.annotation.Nullable int index, int dir) {
             ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/map/HexMap.java:61: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/state/StateMgr.java:23: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return states_.get(name);
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/state/StateMgr.java:27: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return active_state_;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/state/State.java:5: error: [NullAway] @NonNull field manager_ not initialized
    protected StateMgr manager_;
                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/WorldGenerationMap.java:18: error: [NullAway] initializer method does not guarantee @NonNull fields map_ (line 8), elevation_algo_ (line 10), rainfall_algo_ (line 12), temperature_algo_ (line 14) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public WorldGenerationMap(MapType type, int width, int height) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/generation/RainShadowAlgorithm.java:27: error: [NullAway] initializer method does not guarantee @NonNull field rainfall_ (line 17) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public RainShadowAlgorithm(WorldGenerationMap map, float threshold, int distance, int recharge_distance_) {
           ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
14 errors
